radarr/radarr.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: "media"
  name: "radarr-ingress"
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: ca-issuer
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: "radarr.k3s.securait.local"
    http:
      paths:
        - backend:
            service:
              name: "radarr"
              port:
                number: 80
          path: "/"
          pathType: Prefix
  tls:
  - hosts:
    - radarr.k3s.securait.local
